--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ body {
 
 main {
     width: 100%;
+    position: relative;
     /*margin: auto;*/
 }
 
@@ -234,10 +235,15 @@ main {
 /*MODAL*/
 .modal {
     display: none;
-    background-color: rgba(0, 0, 0, 0.4);
+    width: 100%;
+    height: 100%;
     position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    background-color: rgba(0, 0, 0, 0.4);
 }
 .modal-container {
-    osition: fixed;
+    position: relative;
     z-index: 1;
 }
