--- a/style.css
+++ b/style.css
@@ -56,6 +56,11 @@ main {
 }
 
 
+/* LEFTBAR */
+.leftbar-close-btn {
+    display: none;
+}
+
 /* NAVBAR */
 #navbar-container {
     width: 100%;
@@ -66,6 +71,9 @@ main {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+.nav-menu {
+    display: none;
 }
 .nav-img img {
     max-width: 100%;
@@ -263,7 +271,9 @@ main {
 .desc-purchase-add-cart span {
     margin: auto 0 auto 10px;
 }
-
+.prod-sel-mq {
+    display: none;
+}
 
 /*MODAL*/
 .modal {
@@ -432,16 +442,20 @@ main {
         width: 100%;
         margin: 0 auto;
     }
-    .main-mq {
-        filter: brightness(0.5) contrast(0.5);
+    .leftbar-close-btn {
+        display: block;
+        margin: 0 7% 0 5%;
     }
     #navbar {
         width: 100%;
         justify-content: flex-start;
     }
+    .nav-menu {
+        display: block;
+        margin: 0 7% 0 3%;
+    }
     .nav-menu-btn {
         width: 10%;
-        margin-right: 3%;
     }
     .nav-tail {
         margin-left: auto;
@@ -449,6 +463,10 @@ main {
     }
     .nav-tail-btn-cart {
         margin-right: 10px;
+        max-width: 2.2rem;
+    }
+    .nav-tail-btn-avatar-img {
+        max-width: 60%;
     }
     .navbar-hr {
         display: none;
@@ -458,27 +476,35 @@ main {
         position: relative;
         display: block;
     }
-    #image-side .mq-prod-sel-btn {
+    #image-side .prod-sel-mq-btn {
         position: absolute;
     }
     
     #leftbar {
-        position: fixed;
-        padding: 7% 0 0 5%;
-        width: 65%;
-        height: 100%;
         display: none;
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+    }
+    .leftbar-content {
+        width: 65%;
+        display: flex;
         flex-direction: column;
         justify-content: flex-start;
         align-content: flex-start;
         background-color: var(--white);
-        z-index: 1;
+        /*visibility: hidden;
+        -webkit-transition: visibility 1s;
+        transition: width 1s;*/ /*check for gradual leftbar transition*/  
     }
-    #leftbar .leftbar-close-btn {
+    .leftbar-content .leftbar-close-btn {
         align-self: flex-start;
-        margin-bottom: 3%;
+        margin: 7% 0 3% 5%;
     }
-    #leftbar .nav-cat {
+    
+    .leftbar-content .nav-cat {
+        margin-left: 5%;
         width: 100%;
         height: 30vh;
         display: flex;
@@ -492,11 +518,15 @@ main {
         font-size: 1.3em;
         font-weight: 700;
     }
+    .leftbar-overlay {
+        width: 35%;
+        background-color: rgba(0, 0, 0, 0.7);
+    }
 
-    #image-side .mq-prod-sel > img {
+    #image-side .prod-sel-mq > img {
         width: 100%;
     }
-    .mq-prod-sel-btn {
+    .prod-sel-mq-btn {
         position: absolute;
         top: 40%;
         display: flex;
@@ -507,13 +537,13 @@ main {
         background-color: var(--white);
         border-radius: 50%;
     }
-    .mq-prod-sel-btn img {
+    .prod-sel-mq-btn img {
         width: 30%;
     }
-    .mq-prod-sel-btn-previous {
+    .prod-sel-mq-btn-previous {
         margin-left: 3%;
     }
-    .mq-prod-sel-btn-next {
+    .prod-sel-mq-btn-next {
         right: 0;
         margin-right: 3%;
     }
@@ -524,6 +554,9 @@ main {
     #content {
         flex-direction: column;
         margin: 0;
+    }
+    .prod-sel-mq {
+        display: block;
     }
     .product-sel img {
         border-radius: 0;
