--- a/style.css
+++ b/style.css
@@ -429,6 +429,9 @@ main {
 
 /* MEDIA QUERY */
 @media screen and (max-width: 700px) {
+    footer.attribution {
+        margin-top: 30px;
+    }
     body {
         width: 100%;
         margin: 0;
@@ -554,6 +557,10 @@ main {
         flex-direction: column;
         margin: 0;
     }
+    .desc-h {
+        font-size: 2.3em;
+    }
+
     .product-sel-mq {
         display: block;
     }
